--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,14 @@
         "swiftmailer/swiftmailer": "^6.0"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master"
+        "jakub-onderka/php-parallel-lint": "^1.0",
+        "jakub-onderka/php-var-dump-check": "^0.3.0",
+        "phpmd/phpmd": "^2.6",
+        "phpstan/phpstan": "^0.10.5",
+        "phpunit/phpunit": "^7.4",
+        "respect/validation": "^1.1",
+        "roave/security-advisories": "dev-master",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -29,5 +36,21 @@
         "psr-4": {
             "Htec\\Tests\\": "tests/"
         }
+    },
+    "scripts": {
+        "php-lint": "parallel-lint --exclude vendor .",
+        "php-stan": "phpstan analyse -l 7 src",
+        "var-dump-check": "var-dump-check --exclude vendor",
+        "php-cs": "phpcs -s --standard=phpcs.ruleset.xml src/",
+        "php-md": "phpmd src,tests text phpmd.ruleset.xml ",
+        "check-all": [
+            "@php-lint",
+            "@php-stan",
+            "@var-dump-check",
+            "@php-cs",
+            "@php-md"
+        ],
+        "php-cbf": "phpcbf --standard=phpcs.ruleset.xml src/",
+        "unit-tests": "phpunit -c phpunit.xml --colors=auto --coverage-text tests/"
     }
 }
