--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ LOGGER_EMAIL_HOST=smtp.mailtrap.io
 LOGGER_EMAIL_PORT=25
 LOGGER_EMAIL_USERNAME=
 LOGGER_EMAIL_PASSWORD=
+
+BEANSTALKD_HOST=127.0.0.1
+BEANSTALKD_PORT=11300
+BEANSTALKD_TUBE=log_tube
